# geometria_computacional_trabalho_0

./: CMakeLists.txt  Cargo.toml  script.py
app/: main.cpp
app/src/public/: convex_hull.cpp  convex_hull.hpp  renderer.cpp  renderer.hpp  window.cpp  window.hpp
src/: main.rs
